// Pet Weight Monitor Database Schema

Project pet_weight_monitor {
  database_type: 'PostgreSQL'
}

Table users {
  id uuid [pk]
  username varchar [unique, not null]
  email varchar [unique]
  password_hash varchar
  salt varchar
  reset_token varchar
  reset_token_expires timestamp
  email_verified boolean [not null, default: false]
  first_name varchar(50)
  last_name varchar(50)
  profile_picture_id uuid
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (username) [unique]
    (email) [unique]
  }
}

Table animals {
  id uuid [pk]
  owner_id uuid [not null]
  name varchar [not null]
  description text
  birth_date date
  species varchar(50)
  breed varchar(50)
  profile_picture_id uuid
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table weights {
  id uuid [pk]
  animal_id uuid [not null]
  weight numeric(10,2) [not null]
  date timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table media {
  id uuid [pk]
  filename varchar [not null]
  content_type varchar [not null]
  size integer [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table sessions {
  id uuid [pk]
  user_id uuid [not null]
  token varchar [unique, not null]
  created_at timestamp [not null, default: `now()`]
  expires_at timestamp [not null]

  indexes {
    (token) [unique]
  }
}

Ref: users.id < animals.owner_id
Ref: animals.id < weights.animal_id
Ref: media.id < animals.profile_picture_id [delete: set null]
Ref: media.id < users.profile_picture_id [delete: set null]
Ref: users.id < sessions.user_id 